--- a/Zhou.Xiaoting/css/storetheme.css
+++ b/Zhou.Xiaoting/css/storetheme.css
@@ -1,7 +1,37 @@
 
 :root {
 	--color-offwhite: #f4f4f4;
+
+	--color-Main-light:#f1f1f1;
+	--color-Main-medimu:#e1e1e1;
+	--color-Main-dark:#999;
 }
 body {
 	background-color:var(--color-offwhite) ;
+}
+
+@media (max-width:800px) {
+	.container {
+		padding-left: 1em;
+		padding-right:1em;
+	}
+	.navbar .h1 {
+		padding-left:0.5em;
+	}
+
+@media (max-width:400px) {
+	.navbar .display-flex {
+		display:block;
+	}
+	.navbar .nav li{
+		line-height: 2em;
+	}
+}
+
+
+
+.figure.product {
+	border-radius: 0.5em;
+	box-shadow:0 2px 5px rgba(0, 0, 0, 1.0);
+	overflow: hidden;
 }
